syntax = "proto3";
//
option java_package = "emu.lunarcore.proto";

import "PileItem.proto";

message ItemCost {
		PileItem PileItem = 6;
		uint32 EquipmentUniqueId = 13;
		uint32 RelicUniqueId = 9;
}