syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ItemCostList.proto";

message SellItemCsReq {
	bool to_material = 4;
	ItemCostList item_cost_list = 7;
}

